--- a/changgou-parent/changgou-gateway/changgou-gateway-web/src/main/resources/application.yml
+++ b/changgou-parent/changgou-gateway/changgou-gateway-web/src/main/resources/application.yml
@@ -38,6 +38,14 @@ spring:
           - Path=/api/user/**,/api/address/**,/api/area/**,/api/cities/**,/api/provinces/**
           filters:
             - StripPrefix=1
+        # 用户微服务唯一标识
+        - id: changgou_order_route
+          # 指定要路由的服务
+          uri: lb://order
+          predicates:
+          - Path=/api/cart/**,/api/categoryReport/**,/api/orderConfig/**,/api/order/**,/api/orderItem/**,/api/orderLog/**,/api/preferential/**,/api/returnCause/**,/api/returnOrder/**,/api/returnOrderItem/**
+          filters:
+          - StripPrefix=1
 
   # Redis配置
   redis:
