--- a/changgou-parent/changgou-service/changgou-service-goods/pom.xml
+++ b/changgou-parent/changgou-service/changgou-service-goods/pom.xml
@@ -26,6 +26,12 @@
             <artifactId>changgou-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <!-- oauth2.0 令牌解析使用依赖 -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-oauth2</artifactId>
+        </dependency>
     </dependencies>
 
 
