--- a/changgou-parent/changgou-service/pom.xml
+++ b/changgou-parent/changgou-service/pom.xml
@@ -18,6 +18,7 @@
         <module>changgou-service-poster</module>
         <module>changgou-service-search</module>
         <module>changgou-service-user</module>
+        <module>changgou-service-order</module>
     </modules>
     <packaging>pom</packaging>
 
