--- a/code-template/src/main/resources/application.properties
+++ b/code-template/src/main/resources/application.properties
@@ -1,24 +1,24 @@
-#pojo\u5305\u8DEF\u5F84
-pojoPackage=com.changgou.user.pojo
-#Dao\u5305\u8DEF\u5F84
-mapperPackage=com.changgou.user.dao
-#service\u63A5\u53E3\u5305\u8DEF\u5F84
-serviceInterfacePackage=com.changgou.user.service
-#service\u63A5\u53E3\u5B9E\u73B0\u7C7B\u5305\u8DEF\u5F84
-serviceInterfaceImplPackage=com.changgou.user.service.impl
-#controller\u5305\u8DEF\u5F84
-controllerPackage=com.changgou.user.controller
-#feign\u5305\u8DEF\u5F84
-feignPackage=com.changgou.user.feign
-#\u662F\u5426\u542F\u7528swagger(\u76EE\u524D\u53EA\u505A\u4E86Pojo\u751F\u6210)
+# pojo包名
+pojoPackage=jack.changgou.order.pojo
+# Dao包名
+mapperPackage=jack.changgou.order.dao
+# service包名
+serviceInterfacePackage=jack.changgou.order.service
+# service实现包名
+serviceInterfaceImplPackage=jack.changgou.order.service.impl
+# controller包名
+controllerPackage=jack.changgou.order.controller
+# feign调用包名
+feignPackage=jack.changgou.order.feign
+# 开启swagger
 enableSwagger=true
-#swagger-ui\u7684\u8DEF\u5F84
+# swagger-ui生成路径
 swaggeruipath=com.changgou.swagger
-#\u670D\u52A1\u540D\u5B57
-serviceName=user
+# 服务名
+serviceName=order
 
-#\u6570\u636E\u6E90\u914D\u7F6E
-url=jdbc:mysql://192.168.137.118:3307/changgou_user?useSSL=true&characterEncoding=utf-8&serverTimezone=GMT
+# 数据源
+url=jdbc:mysql://192.168.137.118:3307/changgou_order?useSSL=true&characterEncoding=utf-8&serverTimezone=GMT
 uname=root
 pwd=123456
 driver=com.mysql.jdbc.Driver
