--- a/changgou-parent/changgou-service/changgou-service-order/src/main/resources/application.yml
+++ b/changgou-parent/changgou-service/changgou-service-order/src/main/resources/application.yml
@@ -13,9 +13,15 @@ spring:
     port: 6379
 
   # 多个接口上的@FeignClient(“相同服务名”)会报错，overriding is disabled。
-  # 设置 为true ,即 允许 同名
+  # 设置为true ,即允许同名
   main:
     allow-bean-definition-overriding: true
+
+  rabbitmq:
+    host: 192.168.137.118
+    port: 5672
+    username: guest
+    password: guest
 
 # Eureka注册中心配置信息
 eureka:
@@ -27,6 +33,16 @@ eureka:
 feign:
   hystrix:
     enabled: true
+  # 使用Apache HttpClient替换Feign原生httpclient增加的配置
+  client:
+    config:
+      default:
+        connectTimeout: 5000
+        readTimeout: 5000
+        loggerLevel: basic
+  httpclient:
+    enabled: true
+
 # 开启信号量隔离
 hystrix:
   command:
@@ -36,3 +52,13 @@ hystrix:
           thread:
             timeoutInMilliseconds: 10000
           strategy: SEMAPHORE
+
+# 配置RabbitMQ支付队列和交换机信息
+mq:
+  pay:
+    exchange:
+      order: exchange.order
+    queue:
+      order: queue.order
+    routing:
+      key: queue.order
