微信支付，rabbitmq延时队列

--- a/code-template/src/main/resources/application.properties
+++ b/code-template/src/main/resources/application.properties
@@ -1,24 +1,24 @@
 # pojo包名
-pojoPackage=jack.changgou.order.pojo
+pojoPackage=jack.changgou.seckill.pojo
 # Dao包名
-mapperPackage=jack.changgou.order.dao
+mapperPackage=jack.changgou.seckill.dao
 # service包名
-serviceInterfacePackage=jack.changgou.order.service
+serviceInterfacePackage=jack.changgou.seckill.service
 # service实现包名
-serviceInterfaceImplPackage=jack.changgou.order.service.impl
+serviceInterfaceImplPackage=jack.changgou.seckill.service.impl
 # controller包名
-controllerPackage=jack.changgou.order.controller
+controllerPackage=jack.changgou.seckill.controller
 # feign调用包名
-feignPackage=jack.changgou.order.feign
+feignPackage=jack.changgou.seckill.feign
 # 开启swagger
 enableSwagger=true
 # swagger-ui生成路径
 swaggeruipath=com.changgou.swagger
 # 服务名
-serviceName=order
+serviceName=seckill
 
 # 数据源
-url=jdbc:mysql://192.168.137.118:3307/changgou_order?useSSL=true&characterEncoding=utf-8&serverTimezone=GMT
+url=jdbc:mysql://192.168.137.118:3307/changgou_seckill?useSSL=true&characterEncoding=utf-8&serverTimezone=GMT
 uname=root
 pwd=123456
 driver=com.mysql.jdbc.Driver
