--- a/changgou-parent/changgou-service/changgou-service-seckill/src/main/resources/application.yml
+++ b/changgou-parent/changgou-service/changgou-service-seckill/src/main/resources/application.yml
@@ -43,3 +43,13 @@ hystrix:
           thread:
             timeoutInMilliseconds: 10000
           strategy: SEMAPHORE
+
+# 配置RabbitMQ支付队列和交换机信息
+mq:
+  pay:
+    exchange:
+      seckillorder: exchange.seckillorder
+    queue:
+      seckillorder: queue.seckillorder
+    routing:
+      seckillkey: queue.seckillorder
