--- a/changgou-parent/changgou-service/changgou-service-pay/src/main/resources/application.yml
+++ b/changgou-parent/changgou-service/changgou-service-pay/src/main/resources/application.yml
@@ -44,7 +44,7 @@ hystrix:
 # 微信支付信息配置
 weixin:
   appid: wx8397f8696b538317 # 应用id
-  partner: 1473426802 # 商户id
+  partner: 1473426802 # 商户id[传智播客]
   partnerkey: T6m9iK73b0kn9g5v426MKfHQH7X8rKwb # 商户密钥
   notifyurl: https://callmejack.utools.club/weixin/pay/notify/url # 支付回调地址
 
@@ -54,7 +54,10 @@ mq:
   pay:
     exchange:
       order: exchange.order
+      seckillorder: exchange.seckillorder
     queue:
       order: queue.order
+      seckillorder: queue.seckillorder
     routing:
       key: queue.order
+      seckillkey: queue.seckillorder
