--- a/changgou-parent/changgou-service/changgou-service-seckill/pom.xml
+++ b/changgou-parent/changgou-service/changgou-service-seckill/pom.xml
@@ -19,6 +19,11 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <!-- 加入rabbitmq的依赖 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
 
     </dependencies>
 
